# erp_os

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8058342b33b7_initial_schema.py  a1b2c3d4e5f6_add_avg_cost_after_to_gr_lines.py  b2c3d4e5f6a7_add_invoice_so_unique.py  c3d4e5f6a7b8_add_tin_snapshot_to_invoice_cn.py  d4e5f6a7b8c9_add_event_logs.py
backend/app/: enums.py  main.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  redis.py  security.py  storage.py
backend/app/events/: __init__.py  base.py  registry.py  types.py
backend/app/integrations/: __init__.py  myinvois.py  myinvois_factory.py  myinvois_mock.py
backend/app/models/: __init__.py  audit.py  base.py  invoice.py  master.py  organization.py  partner.py  purchase.py  sales.py  sku.py  stock.py
backend/app/prompts/: dashboard_summary.yaml  einvoice_precheck.yaml  ocr_invoice.yaml
backend/app/repositories/: audit.py  base.py  brand.py  category.py  credit_note.py  currency.py  customer.py  delivery_order.py  exchange_rate.py  goods_receipt.py  invoice.py  notification.py  purchase_order.py  sales_order.py  sku.py  stock_adjustment.py  stock_transfer.py  supplier.py  tax_rate.py  uom.py  user.py  warehouse.py
backend/app/routers/: admin.py  ai.py  audit.py  auth.py  brand.py  category.py  credit_note.py  currency.py  customer.py  dashboard.py  delivery_order.py  exchange_rate.py  goods_receipt.py  inventory.py  invoice.py  notifications.py  purchase_order.py  reports.py  sales_order.py  sku.py  stock_adjustment.py  stock_transfer.py  supplier.py  tax_rate.py  uom.py  users.py  warehouse.py
backend/app/schemas/: admin.py  ai.py  audit.py  auth.py  brand.py  category.py  common.py  credit_note.py  currency.py  customer.py  dashboard.py  delivery_order.py  exchange_rate.py  goods_receipt.py  inventory.py  invoice.py  notification.py  purchase_order.py  sales_order.py  sku.py  stock_adjustment.py  stock_movement.py  stock_transfer.py  supplier.py  tax_rate.py  uom.py  user.py  users_admin.py  warehouse.py
backend/app/services/: ai_gate.py  auth.py  brand.py  category.py  costing.py  credit_note.py  currency.py  customer.py  dashboard.py  delivery_order.py  demo_reset.py  einvoice.py  einvoice_precheck.py  exchange_rate.py  goods_receipt.py  ocr.py  (+14 more)
backend/scripts/: seed_all_master.py  seed_customers.py  seed_initial_stock.py  seed_master_data.py  seed_reference_data.py  seed_skus.py  seed_suppliers.py  seed_transactional.py
backend/tests/: conftest.py
(+267 files in other folders)
