[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "erp-os-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
# Pragmatic baseline: pyflakes + pycodestyle errors only.
# Stricter rulesets (UP/B/SIM/ANN) were aspirational — the codebase has ~1500
# legacy violations from before lint was wired into CI. Re-enable incrementally.
select = ["E", "F"]
ignore = [
    "E501",  # line-too-long — many long type signatures, defer to formatter
    "E402",  # module-level import not at top — alembic env.py needs this
    "F401",  # unused-import — 60+ legacy; revisit after import cleanup pass
    "F841",  # unused-local — handful of legacy debug bindings
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI idioms: Depends(...) / Query(...) / etc. are valid in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Cookie",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.12"
# Strict mode was aspirational. Restore once the codebase has type coverage.
strict = false
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
